# business-central-dw-pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  prefect.yaml  pyproject.toml
docs/: .order  ¿Cómo-agregar-una-entidad%3F.md
docs/diagrams/: architecture-diagram.md
flows/: main.py
scripts/: deploy_db.py
sql/procedures/: sp_load_country.sql  sp_load_customer.sql
sql/procedures/core/: sp_fix_customer_unresolved_dimensions.sql  sp_load_currency.sql
sql/seeds/: 01_core_country.sql  02_core_currency.sql
sql/templates/partials/: common_constants.sql.j2
sql/templates/procedures/fixers/: sp_fix_customer_references.sql.j2  sp_fix_customer_unresolved_references.sql.j2
sql/templates/procedures/loaders/: sp_load_country.sql.j2  sp_load_currency.sql.j2  sp_load_customer.sql.j2  sp_load_customer_ledger_entry.sql.j2  sp_load_customer_posting_group.sql.j2  sp_load_customer_price_group.sql.j2  sp_load_exchange_rate.sql.j2  sp_load_inventory_posting_group.sql.j2  sp_load_item.sql.j2  sp_load_item_category.sql.j2  sp_load_location.sql.j2  (+9 more)
src/api/: client.py
src/api/schemas/: __init__.py  base.py
src/bcsync/: __main__.py  flows.py
src/bcsync/api/: client.py
src/bcsync/cli/: app.py
src/bcsync/config/: config.py  config_block.py
src/bcsync/core/: base.py  registry.py  sync.py  sync_engine.py  types.py  utils.py
src/bcsync/db/: constants.py  deploy.py  engine.py  events.py  schemas.py
src/config/: config.py  config_block.py
src/core/: base.py  sync_engine.py
src/db/: engine.py
src/db/models/: base.py
(+122 files in other folders)
